apps/netbird/dashboard.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
  namespace: netbird
spec:
  selector:
    matchLabels:
      app: netbird-dashboard
  template:
    metadata:
      labels:
        app: netbird-dashboard
    spec:
      containers:
        - name: dashboard
          image: netbirdio/dashboard:v2.94.0
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: netbird
spec:
  selector:
    app: netbird-dashboard
  ports:
    - name: http
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dashboard
  namespace: netbird
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - nb.gewis.nl
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: dashboard
          port: 80
